--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -36,14 +36,14 @@
 		{% if site.author.linkedin %}
 		<h3>
 			<a href="https://linkedin.com/pub/{{ site.author.linkedin }}">
-				<i class="fa fa-linkedin fa-lg"></i> LinkedIn	
+				<i class="fa fa-linkedin fa-lg"></i> LinkedIn	</a>
 		</h3>
 		{% endif %}
 		<li>
 		{% if site.author.email %}
 		<h3>
 			<a href="mailto:{{ site.author.email }}">
-			<i class="fa fa-envelope fa-lg"></i> Email
+			<i class="fa fa-envelope fa-lg"></i> Email </a>
 			</h3>
 		{% endif %}
 	</ul>
