--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,8 @@
 
 <header class="sidebar-header" role="banner">
 	<a href="{{ site.BASE_PATH }}/">
-		<h1><a href="/">andywon.nyc</a></h1>
+			<img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=150" class="img-circle" />
+
 	</a>
 	<h3 class="title">
         <a href="{{ site.BASE_PATH }}/">{{ site.title }}</a>
