--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,8 +7,8 @@ body{
 .sidebar {
 	position: fixed;
 	top: 0px;
-	padding-top: 10%;
-	background-color: #2c3e50;
+	padding-top: 5%;
+	background-color: #727B84;
 	color: #fff;
 }
 
@@ -41,6 +41,11 @@ a.nav-link:hover { color: #777 }
 	font-size: 11px;
 	margin: 0 auto;
 	margin-bottom: 10px;
+}
+
+#contact-list {
+	color: #ffffff;
+	padding-left: 20%;
 }
 
 #contact-list li .fa,
