--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,14 +20,14 @@
 	<ul class="list-unstyled list-inline">
 		{% if site.author.github %}
 		<h3>
-			<a href="https://github.com/{{ site.author.github }}">
+			<a id="white-text" href="https://github.com/{{ site.author.github }}">
 				<i class="fa fa-github-alt fa-lg"></i> Github
 			</a>
 		</h3>
 		{% endif %}
 		{% if site.author.twitter %}
 		<p>
-			<a  href="https://twitter.com/{{ site.author.twitter }}">
+			<a id="white-text" href="https://twitter.com/{{ site.author.twitter }}">
 			<h3>
 				<i class="fa fa-twitter fa-lg"></i> Twitter
 			</h3> 
@@ -36,14 +36,14 @@
 		{% endif %}
 		{% if site.author.linkedin %}
 		<h3>
-			<a href="https://linkedin.com/pub/{{ site.author.linkedin }}">
+			<a id="white-text" href="https://linkedin.com/pub/{{ site.author.linkedin }}">
 				<i class="fa fa-linkedin fa-lg"></i> LinkedIn	</a>
 		</h3>
 		{% endif %}
 		<li>
 		{% if site.author.email %}
 		<h3>
-			<a href="mailto:{{ site.author.email }}">
+			<a id="white-text" href="mailto:{{ site.author.email }}">
 			<i class="fa fa-envelope fa-lg"></i> Email </a>
 			</h3>
 		{% endif %}
