--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -18,10 +18,21 @@
 
 <div id="contact-list" class="text-left">
 	<ul class="list-unstyled list-inline">
+		<h3>
+			<a id="white-text" href="http://andywon.nyc/about">
+				<i class="fa fa-adn fa-lg"></i> About Me
+			</a>
+		</h3>
+		<h3>
+			<a id="white-text" href="http://andywon.nyc/projects">
+				<i class="fa fa-foursquare fa-lg"></i> Projects
+			</a>
+		</h3>
+		
 		{% if site.author.github %}
 		<h3>
 			<a id="white-text" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github-alt fa-lg"></i> Github
+				<i class="fa fa-github fa-lg"></i> Github
 			</a>
 		</h3>
 		{% endif %}
