updated font awesome

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,19 +20,19 @@
 	<ul class="list-unstyled list-inline">
 		<h3>
 			<a id="white-text" href="http://andywon.nyc/about">
-				<i class="fa fa-adn fa-lg"></i> About Me
+				<i class="fa fa-adn"></i> About Me
 			</a>
 		</h3>
 		<h3>
 			<a id="white-text" href="http://andywon.nyc/projects">
-				<i class="fa fa-foursquare fa-lg"></i> Projects
+				<i class="fa fa-foursquare"></i> Projects
 			</a>
 		</h3>
 		
 		{% if site.author.github %}
 		<h3>
 			<a id="white-text" href="https://github.com/{{ site.author.github }}">
-				<i class="fa fa-github fa-lg"></i> Github
+				<i class="fa fa-github"></i> Github
 			</a>
 		</h3>
 		{% endif %}
@@ -40,7 +40,7 @@
 		<p>
 			<a id="white-text" href="https://twitter.com/{{ site.author.twitter }}">
 			<h3>
-				<i class="fa fa-twitter fa-lg"></i> Twitter
+				<i class="fa fa-twitter"></i> Twitter
 			</h3> 
 			</a>
 		</p>
@@ -48,14 +48,14 @@
 		{% if site.author.linkedin %}
 		<h3>
 			<a id="white-text" href="https://linkedin.com/pub/{{ site.author.linkedin }}">
-				<i class="fa fa-linkedin fa-lg"></i> LinkedIn	</a>
+				<i class="fa fa-linkedin-square"></i> LinkedIn	</a>
 		</h3>
 		{% endif %}
 		<li>
 		{% if site.author.email %}
 		<h3>
 			<a id="white-text" href="mailto:{{ site.author.email }}">
-			<i class="fa fa-envelope fa-lg"></i> Email </a>
+			<i class="fa fa-envelope"></i> Email </a>
 			</h3>
 		{% endif %}
 	</ul>
