--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -20,12 +20,7 @@
 	<ul class="list-unstyled list-inline">
 		<h3>
 			<a id="white-text" href="http://andywon.nyc/about">
-				<i class="fa fa-adn"></i> About Me
-			</a>
-		</h3>
-		<h3>
-			<a id="white-text" href="http://andywon.nyc/projects">
-				<i class="fa fa-foursquare"></i> Projects
+				<i class="fa fa-adn"></i> About
 			</a>
 		</h3>
 		
@@ -45,6 +40,17 @@
 			</a>
 		</p>
 		{% endif %}
+		<h3>
+			<a id="white-text" href="http://foursquare.com/andy_juan">
+				<i class="fa fa-foursquare"></i> Foursquare
+			</a>
+		</h3>
+		<h3>
+			<a id="white-text" href="http://instagram.com/andy_juan">
+				<i class="fa fa-instagram"></i> Instagram
+			</a>
+		</h3>
+		
 		{% if site.author.linkedin %}
 		<h3>
 			<a id="white-text" href="https://linkedin.com/pub/{{ site.author.linkedin }}">
