--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,6 +2,7 @@
 <html>
 {% include google_analytics.html %}
 <head>
+	<meta name="google-site-verification" content="Pa509OfutQDJ370-zDVlQpRTqkTIZzPiet-W-2BwHes" />
 	<meta charset="utf-8">
 	<title>{{ page.title }}</title>
 	{% if page.description %}
