--- a/_includes/default.html
+++ b/_includes/default.html
@@ -2,7 +2,6 @@
 <html>
 {% include google_analytics.html %}
 <head>
-	<meta name="google-site-verification" content="Pa509OfutQDJ370-zDVlQpRTqkTIZzPiet-W-2BwHes" />
 	<meta charset="utf-8">
 	<title>{{ page.title }}</title>
 	{% if page.description %}
@@ -35,7 +34,7 @@
 	<link rel="alternate" type="application/rss+xml" title="{{ site.name }}" href="{{ site.BASE_PATH }}/feed.xml">
 </head>
 
-<body>
+<body></body>y>
 	<nav class="navbar navbar-default visible-xs" role="navigation">
 		<!-- Brand and toggle get grouped for better mobile display -->
 		<div class="navbar-header">
