--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,10 +32,12 @@
   <div class="article-author-side">
     {% include _author-bio.html %}
   </div>
+<article class="post">
 {{ content }}
+</article>
   <div id="index">
     <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
-    {% for post in site.posts limit:5 %}    
+    {% for post in site.posts limit:3 %}    
     <article>
       {% if post.link %}
         <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
