--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -42,10 +42,9 @@
       {% if post.link %}
         <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
       {% else %}
-        <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }} </a> </h2>
-        <p span id="datef">{{ post.date | date: "%-d %B %Y"}} </p>
+        <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }} 
+        <p span id="datef">{{ post.date | date: "%-d %B %Y"}} </p> </a> </h2>
         <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
-        <br> 
       {% endif %}
     </article>
     {% endfor %}
