--- a/_layouts/threes-full.html
+++ b/_layouts/threes-full.html
@@ -7,7 +7,7 @@
 {% include _head.html %}
 </head>
 
-<body class="home">
+<body>
 
 {% include _browser-upgrade.html %}
 
@@ -28,23 +28,23 @@
   </div><!-- /.image-wrap -->
 {% endif %}
 
-<div id="main" role="main"> 
+<div id="main" role="main">
   <div class="article-author-side">
     {% include _author-bio.html %}
   </div>
-<article class="post">
-{{ content }}
-</article>
   <div id="index">
-    <h3><a href="{{ site.url}}/posts/">Recent Posts</a></h3>
-    {% for post in site.tags.a limit:3 %}
+    {% for post in site.categories.threethings %}
       <article>
         {% if post.link %}
-          <h2 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></h2>
+          <h1 class="link-post"><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a> <a href="{{ post.link }}" target="_blank" title="{{ post.title }}"><i class="fa fa-link"></i></a></h1>
         {% else %}
-          <h2><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }} 
-          <p span id="datef">{{ post.date | date: "%-d %B %Y"}} </p> </a> </h2>
-          <p>{{ post.excerpt | strip_html | truncate: 160 }}</p>
+          <h1><a href="{{ site.url }}{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></h1>
+      <h4>{{ post.date | date: '%B %d, %Y' }}</h4>
+          <p>
+            {{ post.content }}
+            <br>
+            <br>
+          </p>
         {% endif %}
       </article>
     {% endfor %}
